--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -4,6 +4,7 @@
   "description": "## TMS (Transport Management System) - Backend",
   "main": "index.js",
   "scripts": {
+     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +19,12 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
-    "pg": "^8.16.0"
+    "objection": "^3.1.5",
+    "pg": "^8.16.2"
+  },
+  "devDependencies": {
+    "jest": "^30.0.2",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.1"
   }
 }
