--- a/code/frontend/tms-frontend/package.json
+++ b/code/frontend/tms-frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
     "react": "^19.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-csv": "^1.1.10",
     "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
     "postcss": "^8.5.4",
