--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "## TMS (Transport Management System) - Backend",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-     "start": "node src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,17 +13,22 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "objection": "^3.1.5",
-    "pg": "^8.16.2"
+    "pg": "^8.16.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^30.0.2",
+    "knex": "^3.1.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1"
   }
