--- a/code/frontend/tms-frontend/tsconfig.json
+++ b/code/frontend/tms-frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2020",
     "lib": [
       "dom",
       "dom.iterable",
@@ -12,9 +12,11 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true,    
+    /*"module": "esnext",
+    "moduleResolution": "node",*/
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -22,5 +24,5 @@
   },
   "include": [
     "src"
-  ]
+, "tailwind.config.ts"  ]
 }
